--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gestor de Tareas con Google Drive</title>
+    <title>Gestor de Agendas HSP</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -332,7 +332,7 @@
         <div class="container header-content">
             <div class="logo">
                 <i class="fas fa-cloud-upload-alt"></i>
-                <h1>Gestor de Tareas con Drive</h1>
+                <h1>Gestor de Agendas HSP</h1>
             </div>
         </div>
     </header>
@@ -403,7 +403,7 @@
     </div>
 
     <footer>
-        <p>© 2023 Gestor de Tareas con Google Drive. Todos los derechos reservados.</p>
+        <p>© 2025 Gestor de Agendas HSP. Todos los derechos reservados.</p>
     </footer>
 
     <script>
@@ -566,7 +566,7 @@
             // Simular carga de tareas (en un caso real vendrían de una base de datos)
             tasks = {
                 availability: [
-                    { id: 1, name: 'Verificar disponibilidad de Box A', completed: false },
+                    { id: 1, name: 'Verificar disponibilidad de Box', completed: false },
                     { id: 2, name: 'Confirmar horarios disponibles', completed: false }
                 ],
                 validation: [
