Update and rename deepseek_html_20250826_65b9aa.html to index.html
cambia titulos de campos

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de Tareas con Archivos</title>
+    <title>Gestión de Agendas</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -321,15 +321,15 @@
 </head>
 <body>
     <header>
-        <h1>Registro de Tareas con Archivos</h1>
-        <p>Sistema de seguimiento de tareas con almacenamiento en Google Drive</p>
+        <h1>Gestión de Agendas</h1>
+        <p>Sistema de seguimiento de agendas</p>
     </header>
     
     <div class="container">
         <div class="card">
             <div class="card-header">
                 <i class="fas fa-cloud-upload-alt fa-2x"></i>
-                <h2>Nueva Tarea con Archivos</h2>
+                <h2>Nueva Tarea</h2>
             </div>
             <div class="card-content">
                 <form id="tareaForm">
@@ -447,7 +447,7 @@
     </div>
     
     <footer>
-        <p>&copy; 2023 - Sistema de Registro de Tareas | Integrado con Google Sheets y Google Drive</p>
+        <p>&copy; 2025 - Sistema de Gestión de Agendas | Integrado con Google Sheets y Google Drive</p>
     </footer>
 
     <script>
